# Obfuscation_methods

./: .gitignore
ai/: .gitignore  main.cpp  obfuscator.cpp
lab1/Obfuscation_program/: obfuscator.h
obfuscation_program/: .gitignore  CMakeLists.txt
obfuscation_program/inc/args/: arg_checker.hpp  arg_checker_add_garbage_lines.hpp  arg_checker_add_random_whitespaces.hpp  arg_checker_delete_newlines.hpp  arg_checker_in.hpp  arg_checker_mess_up_comments.hpp  arg_checker_out.hpp  arg_checker_rename_variables.hpp  args_parser.hpp
obfuscation_program/inc/io/: file_reader.hpp
obfuscation_program/inc/obfuscation/: comments_obfuscator.hpp  garbage_obfuscator.hpp  newline_obfuscator.hpp  obfuscator.hpp  variables_obfuscator.hpp  whitespaces_obfuscator.hpp
obfuscation_program/inc/tokenizer/: token.hpp  token_classifier.hpp  token_printer.hpp  token_type.hpp  tokenizer.hpp
obfuscation_program/src/: args_parser_test_programm.cpp  main.cpp  tokenizator_test_programm.cpp
obfuscation_program/src/args/: arg_checker.cpp  args_parser.cpp
obfuscation_program/src/io/: file_reader.cpp
obfuscation_program/src/obfuscation/: comments_obfuscator.cpp  garbage_obfuscator.cpp  newline_obfuscator.cpp  variables_obfuscator.cpp  whitespaces_obfuscator.cpp
obfuscation_program/src/tokenizer/: token.cpp  token_classifier.cpp  token_printer.cpp  tokenizer.cpp
test_program/: .gitignore  CMakeLists.txt  max_finder.cpp
